--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,12 @@ name: Tweet Cron Job
 
 on: 
   schedule:
-    - cron: '22 16 * * *'
+    - cron: '56 16 * * *'
 
 jobs:
   send-tweets:
     runs-on: ubuntu-latest
+    environment: ACNHorizonsBotV2Environment
     steps:
       - uses: actions/checkout@v3
 
@@ -21,6 +22,11 @@ jobs:
           path: "ACNHorizonsBotV2/requirements.txt"
       
       - name: Run Script
+        env:
+          TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
+          TWITTER_API_SECRET: ${{ secrets.TWITTER_API_SECRET }}
+          TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+          TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
         run: |
           cd ACNHorizonsBotV2
           python3 tweet.py
